# gravity-info-api

./: .gitignore
gravity-info-dash/: package.json
gravity-info-dash/src/: App.css  App.tsx  types.tsx  utils.ts
gravity-info-dash/src/components/: BatchQueue.tsx  CurrentParameters.tsx  EvmChains.tsx  GravityVolume.tsx  IncommingTransactions.tsx  SupplyInfo.tsx  TransactionQueue.tsx
gravity-info-server/: Cargo.toml
gravity-info-server/src/: batch_relaying.rs  gravity_info.rs  main.rs  total_suppy.rs  volume.rs
gravity-info-server/src/transactions/: database.rs
